tests/error/type_match/tuple_mismatched_element_count2.bz
// error: unable to match tuple expression to tuple type '[i32, i32]'
// note: mismatched tuple element counts: 1 and 2
function test()
{
	let _: [i32, i32] = [ 0 ];
}
